# foregues

./: .gitignore  pyproject.toml
experiments/20250821/1948/: 01_tune.ipynb  02_test.ipynb  03_train.ipynb  download.ipynb  dwx_client_example.py
experiments/edi-challange-0903/: 01_download.ipynb  02_basic_data.ipynb  03_extract_land_data.ipynb  04_land_price.ipynb  05_appreciations.ipynb
experiments/y20250829/: 01_download_history.ipynb  02_train.ipynb  02a_save_image.ipynb  02b_target_change_scale.ipynb  03_test.ipynb  03_xxx.ipynb  edinet_api.ipynb  edinet_playwright.ipynb  jq02_features_and_label.ipynb  jq03_train.ipynb  jq03_train_exp.ipynb  jq05_inference.ipynb  matsu01.ipynb  matsu02.ipynb  modeling.py  shisan_value_kabu_02.ipynb  try.ipynb  try2.ipynb
foregues/: dataset.py  downloader.py  models.py
notebooks/: data_visualization.ipynb  download.ipynb  eda.ipynb  label_balance.ipynb  train.ipynb
